--- a/src/app/features/shop/product-item/product-item.component.html
+++ b/src/app/features/shop/product-item/product-item.component.html
@@ -5,8 +5,9 @@
             <h2 class="text-sm font-semibold uppercase">{{product.name}}</h2>
             <p class="font-light">{{product.price | currency}}</p>
         </mat-card-content>
-        <mat-card-actions>
-            <button mat-stroked-button class="w-full">
+        <!-- 因為 父元素加入購物車會跳轉，使用$event.stopPropagation()避免加入購物車跳轉-->
+        <mat-card-actions (click)="$event.stopPropagation()">
+            <button mat-stroked-button class="w-full" (click)="cartService.addItemToCart(product)">
                 <mat-icon>add_shopping_cart</mat-icon>
                 加入購物車
             </button>
