--- a/src/app/features/shop/product-details/product-details.component.html
+++ b/src/app/features/shop/product-details/product-details.component.html
@@ -7,20 +7,21 @@
                 </div>
                 <div>
                     <h1 class="text-2xl font-semibold text-gray-900">{{product.name}}</h1>
+                    <p>您目前有{{quantityInCart}}件在購物車</p>
                     <div class="mt-4 items-center gap-4 flex">
                         <p class="text-3xl font-extrabold text-gray-900">
                             {{product.price | currency}}
                         </p>
                     </div>
                     <div class="flex gap-4 mt-6">
-                        <button mat-flat-button class="match-input-height"> 
+                        <button [disabled]="quantity === quantityInCart" (click)="updateCart()" mat-flat-button class="match-input-height"> 
                             <mat-icon>shopping_cart</mat-icon>
-                            加入購物車
+                            {{getButtonText()}}
                         </button>
 
                         <mat-form-field appearance="outline" class="flex">
                             <mat-label>數量</mat-label>
-                            <input matInput type="number">
+                            <input matInput min="0" [(ngModel)]="quantity" type="number">
                         </mat-form-field>
                     </div>
                     <mat-divider></mat-divider>
